spectec/test/elab/neg/type-extend-struct.t
  $ ./main.exe type-extend-struct.spectec 2>&1
  error: cannot extend a non-variant type
    --> type-extend-struct.spectec:7:5
    |
  7 |   | myStruct
    |     ^^^^^^^^
    = source: elab
  [1]
